--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@ text-align:center;
 justify-content:space-around;
 height:100%
 align-items:center;
-background:linear-gradient(#E0B4F1, white, #E5C6F1);
+background:linear-gradient(yellow,red,blue);
 }
 </style>
 </head>
 <body align="center">
-<h1 style="text-align:center;"><u>OXFORD PUBLIC SCHOOL</u></h1>
-<img src="oxford.png" alt="public" width="260" height="160">
-<h2>My school name is OXFORD PUBLIC SCHOOL</h2>
-<p>We have three branches namely OXFORD MATRIC, PUBLIC, NEW GEN SCHOOLS.<br>
-So please join our schools</p>
+<h1 style="text-align:center;"><u>EDUVATE</u></h1>
+<img src="edu.png" alt="public" width="260" height="160">
+<h2>ZUDIO</h2>
+<p>Eduvate is a good foundation for learning<br></p>
 <h1>Photos</h1>
-<img src="oxford1.png" alt="school1" width="260" height="160">
-<img src="oxford2.png" alt="school2" width="260" height="160">
-<img src="oxford3.png" alt="school3" width="260" height="160">
+<img src="edu1.png" alt="school1" width="260" height="160">
+<img src="edu2.png" alt="school2" width="260" height="160">
+<img src="edu3.png" alt="school3" width="260" height="160">
 </body>
 </html>
